tests/NormalTests/paczka1/small_fuzzy/15806576.err
Error in line 1: XoR3Pm S821 51,1
Error in line 3: XoR3Pm S710 34,0
Error in line 2: 51Fw6Fah S710 62,9
Error in line 6: 51Fw6Fah A209 4,9
